OOFSWIG/Tests/Errors/vararg.i
// Variable length args are not supported

int foobar(double a, int b, ...);

